# WGLR

./: Cargo.toml
src/: lib.rs  renderer.rs  vertex.rs
src/shaders/: frag.glsl  vert.glsl
